<?xml version="1.0"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.chitek.ignition</groupId>
		<artifactId>chi-report-components</artifactId>
		<version>3.0.0</version>
	</parent>
	<artifactId>rc-common</artifactId>
	<name>rc-common</name>

	<build>
		<sourceDirectory>src/main/java</sourceDirectory>
		<resources>
			<resource>
				<!-- include resources from source folder (.properties) -->
				<directory>src/main/java</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
			<resource>
				<!-- include resources -->
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		<plugins>
			<!-- specify manifest fields -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<archive>
						<manifestEntries>
							<Module-Version>${project.version}</Module-Version>
							<Commit>${git.commit.id.abbrev}</Commit>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<maven.compiler.release>11</maven.compiler.release>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>com.inductiveautomation.ignitionsdk</groupId>
			<artifactId>reporting-common</artifactId>
			<version>8.0.1</version>
			<type>pom</type>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.3.2</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.jfree</groupId>
			<artifactId>jfreechart</artifactId>
			<version>1.0.14</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.python</groupId>
			<artifactId>jython</artifactId>
			<version>2.5.3</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.inductiveautomation.ignitionsdk</groupId>
			<artifactId>ignition-common</artifactId>
			<version>8.0.0</version>
			<type>pom</type>
			<scope>provided</scope>
		</dependency>
	</dependencies>
</project>
